# spotify

./: .gitignore  CHANGELOG.md  README.md  cabal.project  cabal.project.local  hie.yaml  spotify.cabal
evdev/: Main.hs
examples/: Main.hs
examples/Spotify/: CheckPlaylistOverlap.hs  CreateArtistLikedSongsPlaylist.hs  CreatePlaylist.hs  DeleteRecentPlaylists.hs  TransferPlayback.hs
lib/: Spotify.hs
lib/Spotify/: Client.hs
servant/Orphans/Servant/: Lucid.hs
servant/Spotify/: Servant.hs
servant/Spotify/Servant/: Albums.hs  Artists.hs  Categories.hs  Core.hs  Episodes.hs  Player.hs  Playlists.hs  Search.hs  Tracks.hs  Users.hs
src/: Servant.hs  Types.hs
test/: Test.hs
types/Spotify/Types/: Albums.hs  Artists.hs  Auth.hs  Categories.hs  Episodes.hs  Misc.hs  Player.hs  Playlists.hs  Search.hs  Simple.hs  Tracks.hs  Users.hs
types/Spotify/Types/Internal/: CustomJSON.hs  EnumJSON.hs
