cabal-version:      2.4
name:               spotify
version:            0.1.0.0
author:             George Thomas
maintainer:         George Thomas
description:        Haskell interface for interacting with the Spotify Web API
synopsis:           Spotify Web API
homepage:           https://github.com/georgefst/spotify
license:            BSD-3-Clause
license-file:       LICENSE
category:           Music, Web
build-type:         Simple
extra-source-files:
    CHANGELOG.md
    README.md

source-repository head
    type: git
    location: git://github.com/georgefst/spotify.git

common common
    build-depends:
        base >= 4.16,
        aeson,
        base64-bytestring,
        bytestring,
        composition,
        containers,
        directory,
        filepath,
        http-client-tls,
        http-client,
        http-types,
        mtl,
        servant-client,
        servant,
        text,
        time,
        transformers,
        unordered-containers,

        --TODO consider removing
        generic-lens,
        microlens,
        pretty-simple
    default-language: Haskell2010
    default-extensions:
        DataKinds
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        DerivingVia
        DuplicateRecordFields
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        LambdaCase
        MultiParamTypeClasses
        NamedFieldPuns
        OverloadedLabels
        OverloadedStrings
        PartialTypeSignatures
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
    other-extensions:
        AllowAmbiguousTypes
    ghc-options:
        -Wall

        --TODO remove before releasing
        -Wno-unused-imports
        -threaded

library
    import: common
    exposed-modules:
        Types
        Servant
    hs-source-dirs: src

test-suite tests
    import: common
    type: detailed-0.9
    test-module: Test
    hs-source-dirs: test
    build-depends:
        Cabal,
        spotify,
