cabal-version:      2.4
name:               spotify
version:            0.1.0.0
author:             George Thomas
maintainer:         George Thomas
description:        Bindings for interacting with the Spotify Web API
synopsis:           Spotify Web API
homepage:           https://github.com/georgefst/spotify
license:            BSD-3-Clause
license-file:       LICENSE
category:           Music, Web
build-type:         Simple
extra-source-files:
    CHANGELOG.md
    README.md

source-repository head
    type: git
    location: git://github.com/georgefst/spotify.git

common common
    build-depends:
        base >= 4.16,
        aeson ^>= 2.1.0,
        bytestring ^>= 0.11.3,
        composition ^>= 1.0.2,
        containers ^>= 0.6.5,
        directory ^>= 1.3.6,
        filepath ^>= 1.4.2,
        monad-loops ^>= 0.4.3,
        mtl ^>= 2.2.2,
        pretty-simple ^>= 4.1,
        servant ^>= 0.19,
        text ^>= 1.2.5,
        transformers ^>= 0.5.6,
        time ^>= 1.11.1,
        unordered-containers ^>= 0.2.19,
    default-language: GHC2021
    default-extensions:
        AllowAmbiguousTypes
        BlockArguments
        DataKinds
        DeriveAnyClass
        DerivingStrategies
        DerivingVia
        DuplicateRecordFields
        ExplicitNamespaces
        LambdaCase
        NoFieldSelectors
        NoMonomorphismRestriction
        OverloadedLabels
        OverloadedRecordDot
        OverloadedStrings
        PartialTypeSignatures
        RecordWildCards
    ghc-options:
        -Wall
        -threaded

library spotify-types
    import: common
    hs-source-dirs: types
    exposed-modules:
        Spotify.Types.Albums
        Spotify.Types.Artists
        Spotify.Types.Tracks
        Spotify.Types.Users
        Spotify.Types.Categories
        Spotify.Types.Simple
        Spotify.Types.Misc
        Spotify.Types.Auth
        Spotify.Types.Internal.CustomJSON
        Spotify.Types.Internal.EnumJSON
    build-depends:
        base64-bytestring ^>= 1.2.1,

library spotify-servant
    import: common
    hs-source-dirs: servant
    exposed-modules:
        Spotify.Servant.Core
        Spotify.Servant.Albums
        Spotify.Servant.Artists
        Spotify.Servant.Tracks
        Spotify.Servant.Users
        Spotify.Servant.Playlists
        Spotify.Servant.Categories
    build-depends:
        spotify-types,
        http-api-data ^>= 0.4.3,
        servant-client ^>= 0.19,

library
    import: common
    hs-source-dirs: lib
    exposed-modules:
        Spotify
    build-depends:
        spotify-types,
        spotify-servant,
        http-client ^>= 0.7.13,
        http-client-tls ^>= 0.3.6,
        http-types ^>= 0.12.3,
        servant-client ^>= 0.19,

test-suite tests
    import: common
    type: detailed-0.9
    test-module: Test
    hs-source-dirs: test
    build-depends:
        spotify,
        spotify-types,
        spotify-servant,
        Cabal ^>= 3.6,
